--- a/res/layout/parity_list.xml
+++ b/res/layout/parity_list.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -11,21 +13,23 @@
         android:weightSum="1.0" >
 
         <TextView
+            android:id="@+id/baby_name_parity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:text="@string/parity_baby_name"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
 
         <TextView
-            android:id="@+id/baby_name_parity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.9"
             android:gravity="end"
-            android:text=""
-            android:textSize="@dimen/text_Xsmall" />
+            android:text="@string/parity_baby_name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -33,22 +37,25 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1.0" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="@string/parity_hospital_number"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/hospital_number_parity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
             android:gravity="end"
-            android:textSize="@dimen/text_Xsmall" />
+            android:text="@string/parity_hospital_number"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -58,115 +65,153 @@
         android:weightSum="1.0" >
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:text="@string/parity_dob"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
-
-        <TextView
             android:id="@+id/dob_parity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
             android:gravity="end"
-            android:textSize="@dimen/text_Xsmall" />
+            android:text="@string/parity_dob"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/parity_gender"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
         <TextView
             android:id="@+id/gender_parity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_Xsmall" />
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:gravity="end"
+            android:text="@string/parity_gender"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/parity_gestation"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
         <TextView
             android:id="@+id/gestation_parity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_Xsmall" />
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:gravity="end"
+            android:text="@string/parity_gestation"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/parity_mode_of_birth"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
         <TextView
             android:id="@+id/mode_of_birth_parity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_Xsmall" />
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:gravity="end"
+            android:text="@string/parity_mode_of_birth"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/parity_birth_outcome"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
         <TextView
             android:id="@+id/birth_outcome_parity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_Xsmall" />
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:gravity="end"
+            android:text="@string/parity_birth_outcome"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/parity_weight"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="1.0" >
 
         <TextView
             android:id="@+id/weight_parity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_Xsmall" />
+            android:layout_weight="0.1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:gravity="end"
+            android:text="@string/parity_weight"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
