--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_hospital_number"
         android:singleLine="true" />
-        
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +34,7 @@
             android:layout_weight="1.0"
             android:hint="DAY"
             android:inputType="number"
+            android:maxLength="2"
             android:singleLine="true" />
 
         <EditText
@@ -43,6 +44,7 @@
             android:layout_weight="1.0"
             android:hint="MONTH"
             android:inputType="number"
+            android:maxLength="2"
             android:singleLine="true" />
 
         <EditText
@@ -52,6 +54,7 @@
             android:layout_weight="1.0"
             android:hint="YEAR"
             android:inputType="number"
+            android:maxLength="4"
             android:singleLine="true" />
     </LinearLayout>
 
