--- a/res/layout/activity_ante_natal.xml
+++ b/res/layout/activity_ante_natal.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -28,7 +28,7 @@
             android:gravity="end"
             android:text="@string/age"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -54,7 +54,7 @@
             android:gravity="end"
             android:text="@string/edd"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -80,7 +80,7 @@
             android:gravity="end"
             android:text="@string/gestation"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -106,7 +106,7 @@
             android:gravity="end"
             android:text="@string/last_period"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -124,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -132,7 +132,7 @@
             android:gravity="end"
             android:text="@string/blood_group"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -150,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -158,7 +158,7 @@
             android:gravity="end"
             android:text="@string/rhesus"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
     </TableRow>
@@ -179,7 +179,7 @@
             android:layout_weight="0.3"
             android:gravity="start"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_data" />
+            android:textSize="@dimen/text_small" />
 
         <TextView
             android:layout_width="fill_parent"
@@ -188,7 +188,7 @@
             android:gravity="end"
             android:text="@string/parity"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/text_natal_field"
+            android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold"
             android:textColor="@color/grey" />
 
