--- a/res/layout/activity_parity_details.xml
+++ b/res/layout/activity_parity_details.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/padding_small"
+    android:layout_marginTop="@dimen/padding_Xsmall"
     android:gravity="center"
     android:orientation="vertical" >
 
