--- a/res/layout-land/parity_list_layout.xml
+++ b/res/layout-land/parity_list_layout.xml
@@ -9,25 +9,25 @@
         android:id="@+id/dob_parity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.2"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
     <TextView
         android:id="@+id/gestation_parity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.9"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
     <TextView
         android:id="@+id/gender_parity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.8"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
     <TextView
         android:id="@+id/weight_parity"
@@ -35,22 +35,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
     <TextView
         android:id="@+id/mode_of_birth_parity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.3"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
     <TextView
         android:id="@+id/birth_outcome_parity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.8"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/text_small" />
+        android:textSize="@dimen/text_Xsmall" />
 
 </LinearLayout>
