--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -10,5 +10,8 @@
     <color name="purple">#C80CDF</color>
     <color name="brown">#CC5E03</color>
     <color name="grey">#676766</color>
+    
+    <color name="login_background">#A2B0C1</color>
+    <color name="login_top_bar">#000000</color>
   
 </resources>
