--- a/res/layout/activity_confirm_appointment.xml
+++ b/res/layout/activity_confirm_appointment.xml
@@ -10,8 +10,127 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/padding_Xsmall">
+        
+        <TextView
+            android:id="@+id/text_service_user"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_Xsmall"
+            android:text="Appointment for:"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/text_confirm_user"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small"
+            android:paddingLeft="@dimen/padding_Xsmall" />   
 
         <TextView
+            android:id="@+id/text_appt_location"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_Xsmall"
+            android:text="To Attend:"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/text_confirm_appt_location"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small"
+            android:paddingLeft="@dimen/padding_Xsmall" /> 
+            
+        <TextView
+            android:id="@+id/text_appt_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_Xsmall"
+            android:text="At:"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/text_confirm_appt_time"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small"
+            android:paddingLeft="@dimen/padding_Xsmall" /> 
+            
+        <TextView
+            android:id="@+id/text_email"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_Xsmall"
+            android:text="Confirmation email to:"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/text_confirm_email"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small"
+            android:paddingLeft="@dimen/padding_Xsmall" /> 
+            
+        <TextView
+            android:id="@+id/text_sms"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_Xsmall"
+            android:text="Confirmation SMS to:"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/text_confirm_sms"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small"
+            android:paddingLeft="@dimen/padding_Xsmall" /> 
+            
+        <TextView
+            android:id="@+id/text_create_question"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_large"
+            android:text="Book if details are correct"
+            android:textSize="@dimen/text_Xsmall"
+            android:textStyle="bold" /> 
+            
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1.0">
+
+            <Button
+                android:id="@+id/btn_yes_appointment"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_medium"
+                android:layout_marginRight="@dimen/padding_Xsmall"
+                android:layout_marginBottom="@dimen/padding_Xsmall"
+                android:background="@color/lightBlue"
+                android:text="Book"
+                android:layout_weight="0.5" />
+
+            <Button
+                android:id="@+id/btn_no_appointment"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/padding_medium"
+                android:layout_marginRight="@dimen/padding_Xsmall"
+                android:layout_marginBottom="@dimen/padding_Xsmall"
+                android:background="@color/lightBlue"
+                android:text="Cancel"
+                android:layout_weight="0.5" />
+            
+            </LinearLayout>
+
+        <!-- <TextView
             android:id="@+id/text_service_user"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -130,7 +249,7 @@
             android:layout_marginTop="@dimen/padding_large"
             android:text="Would you like to create this appointment?"
             android:textSize="@dimen/text_small"
-            android:textStyle="bold" />
+            android:textStyle="bold" /> 
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -159,7 +278,7 @@
                 android:background="@color/blue"
                 android:text="No"
                 android:layout_weight="0.5" />
-        </LinearLayout>
+        </LinearLayout>-->
     </LinearLayout>
 
 </ScrollView>
